2006-04-27 Sandro Santilli <strk@refractions.net>

	* source/geomgraph/Node.cpp: standard algorithm used in addZ()
	for vector seek.
	* source/geomgraph/NodeMap.cpp: (addNode): always use the Node
	Coordinate as a key in the map to reduce likeliness of
	a premature deletion.

2006-04-26 Sandro Santilli <strk@refractions.net>

	* source/io/StringTokenizer.cpp: fixed bug in peekNextToken()
	function failing read numbers correctly.
	* source/io/WKTReader.cpp: fixed MultiPoint reader
	to accept the correct format: "MULTIPOINT((0 0), (1 1))"
	* tests/xmltester/testLeaksBig.xml: changed some MULTIPOINT
	WKTs to test acceptance.

2006-04-26 Silke Reimer <Silke.Reimer@intevation.de>

	* tools/geos-config.in: fixed library path
	to use layout detected by autoconf

2006-04-22 Mateusz Loskot <mateusz@loskot.net>

	* source/simplify/TopologyPreservingSimplifier.cpp:
	helper classes ctors made public (Bug #100)

2006-04-21 Sandro Santilli <strk@refractions.net>

	* source/geom/PrecisionModel.cpp: fixed
	constructor by type to always initialize scale

2006-04-20 Sandro Santilli <strk@refractions.net>

	* headers/geos/geom/BinaryOp.h: added debugging
	output.
	* geos::algorithm::HCoordinate: switched to
	use of 'long double' types for improved precision.
	added compile time define to force storage of
	intermediate computation values to variables (in
	order to make the -ffloat-store gcc switch effective).
	* source/headers/geos/algorithm/LineIntersector.h:
	added some doxygen comments.

2006-04-14 Sandro Santilli <strk@refractions.net>

	* capi/geos_c.cpp: binary ops invoked using the
	new BinaryOp template function.
	* source/operation/overlay/OverlayOp.cpp: removed
	precision reduction code (use BinaryOp for that)
	* tests/xmltester/XMLTester.cpp: binary ops
	invoked using the new BinaryOp template function.
	* source/headers/geos/geom/BinaryOp.h: new template
	function implementing various heuristics aimed at
	making binary geometry ops work around robustness issues.